# gameboy

./: .gitignore  CMakeLists.txt  Makefile  gbe.c  lcd_controller.c  main.c
include/: gbe.h  lcd_controller.h  termcolors.h
